--- a/src/components/NavItem.astro
+++ b/src/components/NavItem.astro
@@ -6,8 +6,10 @@ interface Props {
 }
 
 const { currentPath, href, title } = Astro.props;
-
-const checkIsCurrent = (currentPath, href) => currentPath === href ? "page" : "false";
+const strip = (href) => {
+  if (href.indexOf('?') === -1) return href
+  return href.split('?')[0]
+}
 ---
 
 <style is:global>
@@ -38,7 +40,7 @@ const checkIsCurrent = (currentPath, href) => currentPath === href ? "page" : "f
 </style>
 
 <div class="nav-item">
-  <a href={href} aria-current={checkIsCurrent(currentPath, href)}>
+  <a href={href} aria-current={currentPath === strip(href) ? "page" : ""}>
     <slot />
     {title}
   </a>
