--- a/src/pages/thoughts/[...slug].astro
+++ b/src/pages/thoughts/[...slug].astro
@@ -1,6 +1,7 @@
 ---
 import { getCollection } from "astro:content";
 import Layout from "@layouts/Layout.astro";
+import ReadMore from "@components/ReadMore.astro";
 
 export async function getStaticPaths() {
   const entries = await getCollection("thoughts", ({ data }) => !data.draft);
@@ -22,4 +23,5 @@ const { Content } = await entry.render();
   stage={entry.data.stage}
 >
   <Content />
+  <ReadMore tag={entry.data.tag} title={entry.data.title} />
 </Layout>
