--- a/src/components/experiments/SvgPathExample.astro
+++ b/src/components/experiments/SvgPathExample.astro
@@ -1,3 +1,9 @@
- <svg>
-  <path fill="#ffad33" stroke="#00487d" fill-opacity="0.5" d="M 0 40 L 50 0 L 100 60 L 30 70 Z"></path>
+<svg>
+  <path
+    fill="#ffad33"
+    stroke="#00487d"
+    fill-opacity="0.5"
+    d="M 0 40 L 50 0 L 100 60 L 30 70 Z"
+  >
+  </path>
 </svg>
