--- a/src/components/Tag.astro
+++ b/src/components/Tag.astro
@@ -3,9 +3,9 @@
     background-color: var(--color-background-heavy);
     /* border: 1px var(--color-foreground) solid; */
     padding: 0 0.35rem 0.2rem;
-    margin: 0 0.5rem;
     border-radius: 0.25rem;
     word-break: keep-all;
+    white-space: nowrap;
   }
 </style>
 
