--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,7 @@ import Layout from "../layouts/Layout.astro";
   <p>
     I have a Masters degree in <strong>
       Innovation and Applied Entrepreneurship
-    </strong> and have solid experience of leading <strong>Agile</strong> teams, communicating with <strong>Stakeholders and Customers, </strong>and creating valuable <strong>User Experiences</strong>.
+    </strong> and have solid experience of leading <strong>Agile</strong> teams, communicating with <strong>Customers and Stakeholders</strong>, and creating valuable <strong>User Experiences</strong>.
   </p>
   <p>
     I create <strong>accessible</strong>, <strong>performant</strong> and
