--- a/src/components/Post.astro
+++ b/src/components/Post.astro
@@ -10,6 +10,9 @@ const { tag, slug, title, description, lastEdited, drawing } = Astro.props;
   .post p {
     margin-block: 0;
   }
+  .post p a {
+    margin-right: 0.25rem;
+  }
 </style>
 
 <li class="post" data-stage={drawing} data-tag={tag} data-post>
