--- a/src/components/experiments/BezierCurveExample.astro
+++ b/src/components/experiments/BezierCurveExample.astro
@@ -1,8 +1,4 @@
 <svg>
-  <path
-    fill="none"
-    stroke="#00487d"
-    d="M 10 10 L 10 30 Q 10 90 70 90 L 90 90"
-  >
+  <path fill="none" stroke="#00487d" d="M 10 10 L 10 30 Q 10 90 70 90 L 90 90">
   </path>
 </svg>
