--- a/src/components/experiments/BezierCurveExampleTwo.astro
+++ b/src/components/experiments/BezierCurveExampleTwo.astro
@@ -1,9 +1,3 @@
 <svg>
-    <path
-      fill="none"
-      stroke="#00487d"
-      d="M 10 10 Q 10 50 50 50 T 90 90"
-    >
-    </path>
-  </svg>
-  
+  <path fill="none" stroke="#00487d" d="M 10 10 Q 10 50 50 50 T 90 90"> </path>
+</svg>
