--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,7 @@ import Layout from "../layouts/Layout.astro";
     </strong> and have solid experience of leading <strong>Agile</strong> teams, communicating with <strong>Customers and Stakeholders</strong>, and creating valuable <strong>User Experiences</strong>.
   </p>
   <p>
-    I create <strong>accessible</strong>, <strong>performant</strong> and
+    I build <strong>accessible</strong>, <strong>performant</strong> and
     <strong>usable</strong> user interfaces by:
   </p>
   <ul>
