--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,11 +28,18 @@ import Layout from "../layouts/Layout.astro";
     <li>coding resilient <strong>JavaScript</strong> (including React.js and TypeScript.js).</li>
   </ul>
   <p>I champion inclusive design and web accessibility.</p>
+  <!-- <p>
+    You can read <a
+      href="/digital-garden?tags=all&notes=false&essays=true&reflections=true"
+    >
+      thoughts from my digital garden
+    </a>, check out my <a href="/experiments">experiments</a>, and take a look at my UI design <a href="/portfolio">portfolio</a>.
+  </p> -->
   <p>
     You can read <a
       href="/digital-garden?tags=all&notes=false&essays=true&reflections=true"
     >
       thoughts from my digital garden
-    </a> and check out my <a href="/experiments">experiments</a>.
+    </a>, and check out my <a href="/experiments">experiments</a>.
   </p>
 </Layout>
