amending image css

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -165,6 +165,8 @@ const { title, description, lastEdited, stage, type } = Astro.props;
       code {
         width: 100%;
       }
+      img,
+      picture,
       video,
       canvas,
       svg {
