--- a/src/components/PortfolioImage.astro
+++ b/src/components/PortfolioImage.astro
@@ -1,13 +1,47 @@
 ---
-import { Image } from "astro:assets";
+import { Picture } from "astro:assets";
+
+interface Props {
+  alt: string;
+  src: ImageMetadata;
+  hasBorder: Boolean;
+}
 
 const { alt, src, hasBorder } = Astro.props;
+
+const widths: number[] = createWidthsAndSizes(320, src.width)[0];
+const sizes: string = createWidthsAndSizes(320, src.width)[1];
+
+function createWidthsAndSizes(
+  initialValue: number,
+  endValue: number
+): [number[], string] {
+  const INCREMENT = 120;
+  const widths: number[] = [];
+  let sizes: string = "";
+  if (initialValue > endValue) return [widths, sizes];
+  let currentValue = initialValue;
+  while (currentValue < endValue) {
+    widths.push(currentValue);
+    sizes =
+      sizes +
+      `(max-width: ${
+        currentValue + INCREMENT < endValue
+          ? currentValue + INCREMENT
+          : endValue
+      }px) ${currentValue}px `;
+    currentValue += INCREMENT;
+  }
+  widths.push(endValue);
+  sizes = sizes + `${endValue}px `;
+  return [widths, sizes];
+}
 ---
 
 <style>
-  /* .portfolio {
-    width: auto;
-  } */
+  .portfolio {
+    height: fit-content;
+  }
 
   .image-with-border {
     border: 1px solid #1e374d;
@@ -15,10 +49,10 @@ const { alt, src, hasBorder } = Astro.props;
   }
 </style>
 
-<Image
+<Picture
   alt={alt}
   src={src}
   class={`portfolio ${hasBorder && "image-with-border"}`}
-  widths={[240, 360, 480, 560, 720, src.width]}
-  sizes={`(max-width: 300px) 240px, (max-width: 400px) 360px,(max-width: 520px) 480px, (max-width: 720px) 560px, (max-width: 1600px) 720px, ${src.width}px`}
+  widths={widths}
+  sizes={sizes}
 />
