--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -119,4 +119,11 @@ import glossaryComponents from "@images/glossary-components.png";
       hasBorder
     />
   </section>
+  <h2>Next</h2>
+  <p
+    >Why not read some <a
+      href="/digital-garden?tags=all&notes=false&essays=true&reflections=true"
+      >thoughts from my digital garden
+    </a>?
+  </p>
 </Layout>
