--- a/src/components/experiments/CubicCurveExample.astro
+++ b/src/components/experiments/CubicCurveExample.astro
@@ -2,7 +2,8 @@
   <path
     fill="none"
     stroke="#00487d"
-    d="M 50 10 C 10 60 10 70 50 70 S 100 0 50 10"
+    stroke-width="2"
+    d="M 50 10 C 10 60 10 70 50 70 S 100 0 50 10 Z"
   >
   </path>
 </svg>
