--- a/src/components/experiments/SvgPathExample.astro
+++ b/src/components/experiments/SvgPathExample.astro
@@ -3,6 +3,7 @@
     fill="#ffad33"
     stroke="#00487d"
     fill-opacity="0.5"
+    stroke-width="2"
     d="M 0 40 L 50 0 L 100 60 L 30 70 Z"
   >
   </path>
