--- a/src/components/experiments/BezierCurveExample.astro
+++ b/src/components/experiments/BezierCurveExample.astro
@@ -1,4 +1,9 @@
 <svg>
-  <path fill="none" stroke="#00487d" d="M 10 10 L 10 30 Q 10 90 70 90 L 90 90">
+  <path
+    fill="none"
+    stroke="#00487d"
+    stroke-width="2"
+    d="M 10 10 L 10 30 Q 10 90 70 90 L 90 90"
+  >
   </path>
 </svg>
