--- a/src/components/experiments/SvgExample.astro
+++ b/src/components/experiments/SvgExample.astro
@@ -1,3 +1,3 @@
-<svg fill="#ffad33" stroke="#00487d" fill-opacity="0.25">
+<svg fill="#ffad33" stroke="#00487d" stroke-width="2" fill-opacity="0.25">
   <path d="M 0 0 L 100 0 L 100 100 L 0 100 Z"></path>
 </svg>
