--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -47,7 +47,7 @@ import glossaryComponents from "@images/glossary-components.png";
     <h2>cxpartners microsite</h2>
     <PortfolioImage
       src={cxpartners}
-      alt="A mockup of the cxpartners remote labs web pages"
+      alt="A mockup of the cxpartners remote labs web pages, it has the value proposition: stay close to customers with our award winning low cost, managed user-research service"
     />
     <p
       >At the start of the pandemic in 2020, I was given a brief to create a
@@ -64,7 +64,11 @@ import glossaryComponents from "@images/glossary-components.png";
   </section>
   <section>
     <h2>Bristol Central Counselling</h2>
-    <PortfolioImage src={bcc} alt="Screenshot of Jo's site" hasBorder />
+    <PortfolioImage
+      src={bcc}
+      alt="Screenshot of Jo's site with hero image with fonts matched to the theme and a simple layout."
+      hasBorder
+    />
     <p
       >Jo reached out to me after she had set up a Wordpress.com website for her
       new Counselling practice as she felt it "didn't look quite right".
@@ -99,7 +103,7 @@ import glossaryComponents from "@images/glossary-components.png";
     <h2>Recent work — JavaScript Glossary</h2>
     <PortfolioImage
       src={glossaryLarge}
-      alt="a Figma design of a glossary website"
+      alt="a Figma design of a glossary website. it has a search bar in a side panel and a list of glossary terms to the right"
       hasBorder
     />
     <p
@@ -109,13 +113,13 @@ import glossaryComponents from "@images/glossary-components.png";
     </p>
     <PortfolioImage
       src={glossaryComponents}
-      alt="Figma components for a glossary website"
+      alt="Figma components and their variants showing different states"
       hasBorder
     />
     <p>Mobile version of design.</p>
     <PortfolioImage
       src={glossarySmall}
-      alt="a Figma design of a glossary website"
+      alt="the mobile version has the search bar in the center below the logo and the scrollable terms below"
       hasBorder
     />
   </section>
