adding links to homepage

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,12 +11,12 @@ import Layout from "../layouts/Layout.astro";
   <p>
     My empathy, curiosity and creativity means that I'm happiest connecting the
     dots, coming up with novel ideas and innovating through <strong>experimentation</strong>,
-    <strong>iteration</strong> and <strong>rapid-prototyping</strong>.
+    <strong>iteration</strong> and <strong><a href="/thoughts/build-the-right-thing-before-you-build-the-thing-right">rapid-prototyping</a></strong>.
   </p>
   <p>
     I have a Masters degree in <strong>
       Innovation and Applied Entrepreneurship
-    </strong> and have solid experience of leading <strong>Agile</strong> teams, communicating with <strong>Customers and Stakeholders</strong>, and creating valuable <strong>User Experiences</strong>.
+    </strong> and have solid experience of leading <strong>Agile</strong> teams, communicating with <strong>Customers and Stakeholders</strong>, and creating valuable <strong><a href="/thoughts/user-experience-and-ui-design">User Experiences</a></strong>.
   </p>
   <p>
     I build <strong>accessible</strong>, <strong>performant</strong> and
@@ -31,8 +31,6 @@ import Layout from "../layouts/Layout.astro";
   <p>
     You can read <a
       href="/digital-garden?tags=all&notes=false&essays=true&reflections=true"
-    >
-      thoughts from my digital garden
-    </a>, check out my <a href="/experiments">experiments</a>, and take a look at my UI design <a href="/portfolio">portfolio</a>.
+    >thoughts from my digital garden</a>, check out my <a href="/experiments">experiments</a>, and take a look at my UI design <a href="/portfolio">portfolio</a>.
   </p>
 </Layout>
