--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -125,8 +125,7 @@ import glossaryComponents from "@images/glossary-components.png";
   </section>
   <h2>Next</h2>
   <p
-    >Why not read some <a
-      href="/digital-garden?tags=all&notes=false&essays=true&reflections=true"
+    >Why not read some <a href="/digital-garden?tags=all&notes=false"
       >thoughts from my digital garden
     </a>?
   </p>
