--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -32,7 +32,7 @@ import NavItem from "./NavItem.astro";
     <ul role="list">
       <li>
         <NavItem
-          href="/digital-garden?tags=all&notes=false&essays=true&reflections=true"
+          href="/digital-garden?tags=all&notes=false"
           currentPath={Astro.url.pathname}
           title="Thoughts"
         >
