--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,7 +30,7 @@ import Layout from "../layouts/Layout.astro";
   <p>I champion inclusive design and web accessibility.</p>
   <p>
     You can read <a
-      href="/digital-garden?tags=all&notes=false&essays=true&reflections=true"
+      href="/digital-garden?tags=all&notes=false"
     >thoughts from my digital garden</a>, check out my <a href="/experiments">experiments</a>, and take a look at my UI design <a href="/portfolio">portfolio</a>.
   </p>
 </Layout>
