--- a/src/components/TagFilterButtonGroup.astro
+++ b/src/components/TagFilterButtonGroup.astro
@@ -5,4 +5,4 @@
   }
 </style>
 
-<div id="tag-filter-button-group" hidden><div>Filter by tag:<slot /></div></div>
+<div id="tag-filter-button-group" hidden>Filter by tag:<div><slot /></div></div>
