tweaking styles and fixing whitespace issues

--- a/src/components/Cover.astro
+++ b/src/components/Cover.astro
@@ -6,6 +6,12 @@
     padding: 1.5rem;
   }
 
+  @media (min-width: 1440px) {
+    .cover {
+      padding: 1.5rem 10%;
+    }
+  }
+
   .cover > * {
     margin-block: 1.5rem;
   }
