--- a/src/components/ReadMore.astro
+++ b/src/components/ReadMore.astro
@@ -17,6 +17,12 @@ const filteredPosts = posts.filter(
 );
 ---
 
+<style>
+  h2 + ul {
+    margin-top: 0;
+  }
+</style>
+
 <hr />
 {filteredPosts.length > 0 && (
   <>
