--- a/src/pages/digital-garden.astro
+++ b/src/pages/digital-garden.astro
@@ -25,19 +25,14 @@ const nonDraftPosts = sortPosts(posts).filter((post) => !post.data.draft);
   </p>
   <p>
     Inspired by <a href="https://nesslabs.com/digital-garden-set-up">
-      Anne-Laure Le Cunff
-    </a>, <a href="https://maggieappleton.com/garden-history">
-      Maggie Appleton
-    </a> and <a
+      Anne-Laure Le Cunff</a>, <a href="https://maggieappleton.com/garden-history">Maggie Appleton</a> and <a
       href="https://twitter.com/Mappletons/status/1250532315459194880"
-    >
-      others
-    </a>, this is not a chronological blog but an evergreen place where ideas
+    >others</a>, this is not a chronological blog but an evergreen place where ideas
     can be edited and refined.
   </p>
 
   <p>
-    It is better to work in the open and be comfortable with iterative progress,
+    It is better to work in the open and be comfortable with iterative progress
     than wait for the big reveal...
   </p>
 
