--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,6 +31,6 @@ import Layout from "../layouts/Layout.astro";
   <p>
     You can read <a
       href="/digital-garden?tags=all&notes=false"
-    >thoughts from my digital garden</a>, check out my <a href="/experiments">experiments</a>, and take a look at my UI design <a href="/portfolio">portfolio</a>.
+    >thoughts from my digital garden</a>, check out my <a href="/experiments">experiments</a>, and take a look at my <a href="/portfolio">UI design portfolio</a>.
   </p>
 </Layout>
