--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -125,8 +125,8 @@ import glossaryComponents from "@images/glossary-components.png";
   </section>
   <h2>Next</h2>
   <p
-    >Why not read some <a href="/digital-garden?tags=all&notes=false"
-      >thoughts from my digital garden
+    >Why not read my <a href="/thoughts/user-experience-and-ui-design"
+      >thoughts about UX and UI
     </a>?
   </p>
 </Layout>
