--- a/src/components/Post.astro
+++ b/src/components/Post.astro
@@ -19,9 +19,7 @@ const { tag, slug, title, description, lastEdited, drawing } = Astro.props;
       href={slug}
       transition:name={title && slugify(title)}
       transition:animate="initial"
-    >
-      {title}
-    </a>
+    >{title}</a>
     {tag && <Tag>{tag}</Tag>}
   </p>
   <p transition:name={slugify(description)} transition:animate="initial">
